Grace/tests/gibbs/errors/t085.grace
// ERROR = P1026
true && 2 < 3
